--- a/panel/package.json
+++ b/panel/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint panel --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "sass": "^1.52.3",
     "vue": "^3.2.36",
