--- a/panel/package.json
+++ b/panel/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
-    "build-only": "vite build",
+    "build-only": "vite build && node ./fix.index.js",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint panel --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -13,6 +13,8 @@
     "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "element-plus": "^2.2.27",
+    "json-format-highlight": "^1.0.4",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "sass": "^1.52.3",
