--- a/panel/package.json
+++ b/panel/package.json
@@ -17,8 +17,9 @@
     "json-format-highlight": "^1.0.4",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
+    "pretty-bytes": "^6.0.0",
     "sass": "^1.52.3",
-    "vue": "^3.2.36",
+    "vue": "3.2.45",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
