--- a/panel/package.json
+++ b/panel/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint panel --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
